2006-01-31  Lluis Sanchez Gual  <lluis@novell.com>

	* LogicalCallContext.cs: Added shared empty call context.
	* MethodCall.cs: Added better error checking and reporting in
	the code that resolves methods.
	
	* ReturnMessage.cs, MethodResponse.cs, MethodCall.cs: Never return null in 
	LogicalCallContext. If it's null, return an empty context. Based
	on a patch by Dominic Ullmann that fixes bug #77364.

2005-06-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MethodReturnMessageWrapper.cs: ArgCount now returns the count
	from the internal arg array, since it may change.
	* MonoMethodMessage.cs: Added NeedsOutProcessing helper method.

2005-05-31  Lluis Sanchez Gual  <lluis@novell.com>

	* ReturnMessage.cs: Added some null checks.
	* MethodReturnMessageWrapper.cs: Added some null checks. Fixed
	incorrect cast in the constructor.

2005-05-20  Sebastien Pouliot  <sebastien@ximian.com>

	* AsyncResult.cs: Added new fields (required for stack propagation) to
	match runtime structure.

2005-05-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MethodCall.cs: Fix warning.

2004-10-26  Lluis Sanchez Gual  <lluis@novell.com>

	* CallContext.cs: In CreateLogicalCallContext, added parameter which
	specifies if an empty LogicalCallContext needs to be created if there are
	no context values.

2004-09-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MethodCallMessageWrapper.cs: The wrapper has to modify the wrapped
	  message. MS does it.
	* ReturnMessage.cs: Use TypeName instead of _typeName since now name is
	  lazely constructed.

2004-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* ConstructionCall.cs: Added a Proxy property (which is the proxy that
	  will reference the object being created).
	* StackBuilderSink.cs: Take into account the forceInternalExecute
	  parameter.

2004-09-11 Ben Maurer  <bmaurer@users.sourceforge.net>

	* CallContext.cs: Use [ThreadStatic], it is much faster than the
	Thread.[Get/Set]Data functions

2004-09-11 Ben Maurer  <bmaurer@users.sourceforge.net>
